Bug 302557 - dropping a file onto folder in the places toolbar creates an entry for that file instead moving it into the folder
Summary: dropping a file onto folder in the places toolbar creates an entry for that f...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: places (other bugs)
Version First Reported In: 2.0.95
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Frank Reininghaus
URL:
Keywords: regression
: 303226 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-26 12:41 UTC by m.wege
Modified: 2012-07-11 23:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-06-26 12:41:08 UTC
Dropping a file onto folder in the places toolbar creates an entry for that file instead moving it into the folder. The behaviour was different in the past and does not make any sense since clicking on that entry for the file in the places toolbar creates an error message saying that the entry is a file but a folder was expected.

Reproducible: Always
Comment 1 Frank Reininghaus 2012-06-27 10:30:51 UTC
Thanks for the bug report, I can confirm this problem.
Comment 2 Frank Reininghaus 2012-07-09 09:10:51 UTC
*** Bug 303226 has been marked as a duplicate of this bug. ***
Comment 3 Frank Reininghaus 2012-07-11 22:37:35 UTC
Git commit f4c960025167b7c7e04e1290ac9d9fee03a9b62d by Frank Reininghaus.
Committed on 12/07/2012 at 00:27.
Pushed by freininghaus into branch 'master'.

Re-implement dropping of files on folders in the Places Panel.

This resolves a regression caused by the Places Panel rewrite. There is
a small glitch left when reordering items (dragging below the last or
above the first item only shows the drop indicator when first dragging
out of the item and then back), but I prefer not to fix this glitch
right now because this would require a more intrusive change, and I do
not want to risk regressions because is not much time left to fix them
before 4.9.0 is released.

Thanks to Peter Penz for providing some advice about this issue.

M  +24   -17   dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +9    -0    dolphin/src/kitemviews/kitemlistcontroller.h
M  +7    -0    dolphin/src/kitemviews/kitemlistview.cpp
M  +2    -0    dolphin/src/panels/places/placesitemlistwidget.cpp
M  +6    -1    dolphin/src/panels/places/placesitemmodel.cpp
M  +4    -1    dolphin/src/panels/places/placesitemmodel.h
M  +18   -1    dolphin/src/panels/places/placespanel.cpp
M  +1    -0    dolphin/src/panels/places/placespanel.h

http://commits.kde.org/kde-baseapps/f4c960025167b7c7e04e1290ac9d9fee03a9b62d
Comment 4 Frank Reininghaus 2012-07-11 22:43:40 UTC
Git commit 43e89779739c9e95f939fba8f4e98f52d184a3ba by Frank Reininghaus.
Committed on 12/07/2012 at 00:27.
Pushed by freininghaus into branch 'KDE/4.9'.

Re-implement dropping of files on folders in the Places Panel.

This resolves a regression caused by the Places Panel rewrite. There is
a small glitch left when reordering items (dragging below the last or
above the first item only shows the drop indicator when first dragging
out of the item and then back), but I prefer not to fix this glitch
right now because this would require a more intrusive change, and I do
not want to risk regressions because is not much time left to fix them
before 4.9.0 is released.

Thanks to Peter Penz for providing some advice about this issue.
FIXED-IN: 4.9.0
(cherry picked from commit f4c960025167b7c7e04e1290ac9d9fee03a9b62d)

M  +24   -17   dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +9    -0    dolphin/src/kitemviews/kitemlistcontroller.h
M  +7    -0    dolphin/src/kitemviews/kitemlistview.cpp
M  +2    -0    dolphin/src/panels/places/placesitemlistwidget.cpp
M  +6    -1    dolphin/src/panels/places/placesitemmodel.cpp
M  +4    -1    dolphin/src/panels/places/placesitemmodel.h
M  +18   -1    dolphin/src/panels/places/placespanel.cpp
M  +1    -0    dolphin/src/panels/places/placespanel.h

http://commits.kde.org/kde-baseapps/43e89779739c9e95f939fba8f4e98f52d184a3ba
Comment 5 m.wege 2012-07-11 23:07:06 UTC
Thanks for fixing this. There may be are two otherrelated bugs, which I do not know if they will be fixed by this or were already already addressed by this, since Kubuntu did not publish any RC-packages and I am still stuck with Beta 2:
- If a new device (USB, external drive) appears in the drive section of the places panel, it does not open if clicked on it. It will work with drives which were already there.
- The recently accessed/ search for should not appear above the "drives" section and should be collapsable/expandable since they take to much space.
I will file separate bug reports for those, if they are likely to still exist after your rewrite.
Comment 6 Frank Reininghaus 2012-07-11 23:13:34 UTC
(In reply to comment #5)
> - If a new device (USB, external drive) appears in the drive section of the
> places panel, it does not open if clicked on it. It will work with drives
> which were already there.

This sounds like bug 301071, which should be fixed since RC 1.

> - The recently accessed/ search for should not appear above the "drives"
> section and should be collapsable/expandable since they take to much space.

Feel free to file a feature request about that!