src/panels/places/placesitemlistwidget.cpp
@@ -19,6 +19,8 @@
 
 #include "placesitemlistwidget.h"
 
+#include "kdebug.h"
+
 PlacesItemListWidget::PlacesItemListWidget(KItemListWidgetInformant* informant, QGraphicsItem* parent) :
     KStandardItemListWidget(informant, parent)
 {
